[gd_scene load_steps=3 format=3 uid="uid://wave_preview"]

[ext_resource type="Script" path="res://scripts/ui/wave_preview.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.05, 0.1, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="WavePreview" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -200.0
offset_right = 140.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 8.0
offset_right = -12.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "即将到来"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemiesLabel" type="Label" parent="VBox"]
layout_mode = 2
text = ""
autowrap_mode = 2

[node name="RoutesLabel" type="Label" parent="VBox"]
layout_mode = 2
text = ""
horizontal_alignment = 1
